# webdz14

app/: main.py  pyproject.toml
app/migrations/: env.py
app/migrations/versions/: 88376a5f4f2c_init.py
app/quotescraper/: migration.py
app/quotescraper/noteapp/: forms.py  models.py  urls.py  utils.py  views.py
app/quotescraper/noteapp/migrations/: 0001_initial.py  0002_alter_quote_author.py  0003_author_user_quote_user_tag_user_and_more.py  0004_remove_tag_tag_of_username_remove_tag_user.py  0005_remove_author_user_remove_quote_user_and_more.py
app/quotescraper/noteapp/static/quotes/: style.css
app/quotescraper/noteapp/templates/quotes/: add_author.html  add_quote.html  author.html  base.html  index.html  tags.html  top_tags.html
app/quotescraper/noteapp/templatetags/: extract.py
app/quotescraper/notes/: settings.py  urls.py
app/quotescraper/users/: forms.py  urls.py  views.py
app/quotescraper/users/templates/users/: password_reset.html  password_reset_confirm.html  signup.html
app/quotescraper/utils/: authors.json  quotes.json  quotes_to_scrape.py
app/src/: schemas.py
app/src/conf/: config.py
app/src/database/: db.py  models.py
app/src/repository/: tags.py  users.py
app/src/routes/: auth.py  notes.py
app/src/services/: auth.py  email.py  roles.py
app/src/tests/: test_pytest_repository_users.py  test_unit_repository_notes.py  test_unit_repository_tags.py  test_unit_repository_users.py
